--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,21 +38,7 @@
 		</p>
       </header>
       <section>
-
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>研究テーマ　音声と音楽を対象に、さまざまな信号処理と情報処理の問題を解く
-</h3>
-
-<p>
-自動作曲、自動伴奏、自動編曲、自動採譜、和声認識、音色変換、音声認識、音声合成、音声変換、環境音認識、聴覚情景分析、手書き文字認識などをテーマとして、信号処理理論や確率モデルや音楽理論を駆使して研究しています。
-</p>
-
-<h3><a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>研究室ニュース</h3>
-
-<p> 2014年4月 嵯峨山研究室が東京大学より明治大学に移転しました．</p>
-
-
+{{contents}}
       </section>
 
 
