--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
 		<h3> 研究室情報 </h3>
         <p> 
-        メンバー <br>
+        <a href "members.html"> メンバー</a> <br>
         発表論文 <br>
         </p>
 
