--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
         <p> 所在地：明治大学 中野キャンパス</p>
 
 		<h3> 研究室情報 </h3>
-        <p> 
-        <a href "members.html"> メンバー</a> <br>
+        <p>
+	<a href="index.html">トップページ<a> <br>
+        <a href="members.html"> メンバー</a> <br>
         発表論文 <br>
         </p>
 
