--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,9 @@
 
 		<h3> 研究室情報 </h3>
         <p>
-	<a href="index.html">トップページ<a> <br>
-        <a href="members.html"> メンバー</a> <br>
+	<a href="index.html"> トップページ <a> <br>
+	<a href="members.html"> メンバー </a> <br>
+	<a href="access.html"> アクセス </a> <br>
         発表論文 <br>
         </p>
 
