--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -98,7 +98,7 @@ img {
 header {
   width:270px;
   float:left;
-  position:fixed;
+  position:static;
 }
 
 header ul {
@@ -179,7 +179,7 @@ hr {
 footer {
   width:270px;
   float:left;
-  position:fixed;
+  position:static;
   bottom:50px;
 }
 
