--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <h2>明治大学<br>総合数理学部<br>先端メディアサイエンス学科<br>嵯峨山 研究室</h2>
         <p></p>
         <p class="view"><a href="https://github.com/sagayama-hil">GitHub</a></p>
+        <p class="view"><a href="http://hil.t.u-tokyo.ac.jp/">旧サイト</a></p>
         <p> 所在地：明治大学 中野キャンパス</p>
 
 		<h3> 研究室情報 </h3>
@@ -36,7 +37,8 @@
 
 		<h3> リンク </h3>
 		<p>
-			国立情報学研究所
+		<a href="http://hil.t.u-tokyo.ac.jp/mklab/index.html"> 東京大学 亀岡研究室 </a> <br>
+		<a href="http://www.onn.nii.ac.jp/onono.html"> 国立情報学研究所 小野研究室 </a> <br>
 		</p>
       </header>
 
