--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>明治大学<br>総合数理学部<br>先端メディアサイエンス学科<br>嵯峨山 研究室</h2>
+        <h2>
+        <a href="http://www.meiji.ac.jp/index.html">明治大学</a><br>
+        <a href="http://www.meiji.ac.jp/ims/">総合数理学部</a><br>
+        <a href="http://www.meiji.ac.jp/ims/subject/fms/">先端メディアサイエンス学科</a><br>
+        嵯峨山 研究室</h2>
         <p></p>
         <p class="view"><a href="https://github.com/sagayama-hil">GitHub</a></p>
         <p class="view"><a href="http://hil.t.u-tokyo.ac.jp/">旧サイト</a></p>
