link to top, p -> br

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,15 @@
         <a href="http://www.meiji.ac.jp/index.html">明治大学</a><br>
         <a href="http://www.meiji.ac.jp/ims/">総合数理学部</a><br>
         <a href="http://www.meiji.ac.jp/ims/subject/fms/">先端メディアサイエンス学科</a><br>
-        嵯峨山 研究室</h2>
+        <a href="index.html">嵯峨山 研究室</a>
+        </h2>
         <p></p>
-        <p class="view"><a href="https://github.com/sagayama-hil">GitHub</a></p>
-        <p class="view"><a href="http://hil.t.u-tokyo.ac.jp/">旧サイト</a></p>
-        <p> 所在地：明治大学 中野キャンパス</p>
-
+        <p> 
+        <a href="https://github.com/sagayama-hil">GitHub</a><br>
+        <a href="http://hil.t.u-tokyo.ac.jp/">旧サイト</a><br>
+        所在地：明治大学 中野キャンパス
+	</p>
+	
 		<h3> 研究室情報 </h3>
         <p>
 	<a href="index.html"> トップページ <a> <br>
