--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 	<a href="index.html"> トップページ <a> <br>
 	<a href="members.html"> メンバー </a> <br>
 	<a href="access.html"> アクセス </a> <br>
-        発表論文 <br>
+       <a href="publications.html"> 発表論文 </a> <br>
         </p>
 
 		<h3> 嵯峨山研究室で開発したシステム </h3>
